Closed Bug 1682861 Opened 4 years ago Closed 4 months ago

ThreadSanitizer: lock-order-inversion (potential deadlock) [@nsDOMWindowUtils::CompareCanvases]

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: Gankra, Assigned: Gankra)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Found while bringing up wpt under tsan. It looks like it doesn't like us grabbing both canvas' surfaces' locks at the same time?

We have a lot of false positives around locks on the same thread, so it wouldn't be surprising that this is another instance.

Permalink to expected problem lines.

General information about TSan reports

Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.

Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.

False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

Assignee: nobody → a.beingessner
Status: NEW → ASSIGNED
Keywords: leave-open
Assignee: a.beingessner → nobody
Status: ASSIGNED → NEW
Assignee: nobody → a.beingessner
Status: NEW → ASSIGNED
Pushed by abeingessner@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b7bc8225a559
Add supression for likely false-positive. r=decoder
Assignee: a.beingessner → nobody
Status: ASSIGNED → NEW
Keywords: leave-open
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Assignee: nobody → a.beingessner
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: