Bug 1682861 - Add supression for likely false-positive. r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D102317